--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -5,51 +5,65 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
+	padding: 4rem 0;
+	text-align: center;
+	position: relative;
+	overflow: hidden;
 }
 
 @media screen and (max-width: 966px) {
-  .heroBanner {
-    padding: 2rem;
-  }
+	.heroBanner {
+		padding: 2rem;
+	}
 }
 
 .cta {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 2.4rem;
-  margin-bottom: 4.2rem;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 2.4rem;
+	margin-bottom: 4.2rem;
 }
 
 .indexCtas {
-  --ifm-button-size-multiplier: 1.6;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  margin-top: 24px;
+	--ifm-button-size-multiplier: 1.6;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	margin-top: 24px;
 }
 
 .indexCtas a:first-of-type {
-  margin-right: 1rem;
+	margin-right: 1rem;
 }
 
 .indexCtas a,
 .indexCtas a:hover {
-  color: var(--ifm-color-content);
+	color: var(--ifm-color-content);
 }
 
 .indexCtas a:first-of-type,
 .indexCtas a:first-of-type:hover {
-  color: black;
+	color: black;
 }
 
 .topImage {
-  height: 360px;
-  width: 360px;
-  margin-bottom: 20px;
+	height: 360px;
+	width: 360px;
+	margin-bottom: 20px;
+}
+
+.pitch {
+	margin-top: 42px;
+	max-width: 60ch;
+	text-align: center;
+}
+
+.learnMoreCtas {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	gap: 16px;
+	margin-top: 24px;
 }
